--- a/front/src/SCSS/ProjectEditPage/PositionCard.scss
+++ b/front/src/SCSS/ProjectEditPage/PositionCard.scss
@@ -32,7 +32,7 @@
     .positionCard__position {
       margin: 0 0.2rem;
       font-size: $fontSs;
-      font-weight: $normal;
+      font-weight: $regular;
     }
   }
 }
