--- a/front/src/SCSS/Base.scss
+++ b/front/src/SCSS/Base.scss
@@ -27,6 +27,7 @@ $fontSs: 0.85rem; //14px ?
 $shadowDeep: 0rem 0.3rem 0.3rem 0rem rgba(0, 0, 0, 0.25);
 $shadow: 0rem 0.3rem 0.3rem 0rem rgba(0, 0, 0, 0.1);
 $shadowLight: 0rem 0.2rem 0.5rem 0rem rgba(0, 0, 0, 0.05);
+$shadowAll: 0 0 0 9999px rgba(0, 0, 0, 0.6);
 
 $round: 0.7rem; //border-radius 통일
 // $semiRound: 0.4rem; // button 등 작은 요소들
