--- a/front/src/SCSS/ProfilePage/UnfollowAlert.scss
+++ b/front/src/SCSS/ProfilePage/UnfollowAlert.scss
@@ -3,7 +3,7 @@
 .unfollow__alert {
   cursor: auto;
   position: fixed;
-  box-shadow: 0 0 0 9999px #000000b0;
+  box-shadow: $shadowAll;
   border-radius: $round;
   top: 50%;
   left: 50%;
