--- a/front/src/SCSS/ProjectEditPage/ProjectEditPage.scss
+++ b/front/src/SCSS/ProjectEditPage/ProjectEditPage.scss
@@ -1,12 +1,13 @@
 @import "../Base.scss";
 
 .project-edit__wrapper {
+  padding: 1rem;
   overflow: auto;
   max-width: 1400px;
   background-color: white;
   border-radius: $round;
   box-shadow: $shadow;
-  margin: 1rem auto;
+  margin: 1rem auto 2rem auto;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -101,7 +102,7 @@
       color: white;
       border: none;
       margin: 0 0.5rem;
-      font-weight: $normal;
+      font-weight: $regular;
     }
     .project-edit__delete {
       background-color: $pointRed;
@@ -121,10 +122,10 @@
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
-  margin: 0 2rem;
+  margin: 0 1rem;
 }
 .project-edit__left {
-  width: 40%;
+  width: 43%;
   // background-color: pink;
   position: relative;
   .project-edit__position-label {
@@ -152,8 +153,8 @@
 
   .project-edit__skill {
     .project-edit__add-skill {
-      width: 14rem;
-      padding: 0.2rem 0.7rem;
+      width: 14.5rem;
+      padding: 0.3rem 0.7rem;
     }
   }
   .project-edit__selected-skill {
@@ -167,6 +168,10 @@
         right: -0.8rem;
         bottom: 0;
         color: $grey;
+        cursor: pointer;
+        &:hover {
+          color: $darkGrey;
+        }
       }
     }
   }
@@ -176,15 +181,45 @@
 
   .project-edit__reference {
     input {
-      width: 90%;
+      width: 92%;
       margin-right: 0.5rem;
+      background-color: $bodyColor;
+      padding: 0.3rem 1rem;
     }
     .reference-icon {
       color: $lightGrey;
-      font-size: $fontMl;
+      font-size: 1.5rem;
       cursor: pointer;
       &:hover {
-        color: $grey;
+        color: $mainColor;
+      }
+    }
+    .selected-reference {
+      display: flex;
+      align-items: center;
+      margin-top: 0.5rem;
+      .reference-url {
+        width: 92%;
+        margin-right: 0.5rem;
+        border: 2px solid $lightestGrey;
+        padding: 0.5rem 1rem;
+        border-radius: $round;
+        white-space: nowrap;
+        // position: relative;
+        overflow: scroll;
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+        &::-webkit-scrollbar {
+          display: none;
+        }
+      }
+      .reference-x {
+        font-size: 1.5rem;
+        color: $lightGrey;
+        cursor: pointer;
+        &:hover {
+          color: $pointRed;
+        }
       }
     }
   }
@@ -210,6 +245,11 @@
   input,
   span {
     border-radius: $round !important;
+  }
+  .placeholder {
+    background-color: transparent;
+    opacity: 0.6;
+    cursor: auto;
   }
 
   .toastui-editor-defaultUI-toolbar {
