--- a/front/src/SCSS/Common/Chat/ChatRoom.scss
+++ b/front/src/SCSS/Common/Chat/ChatRoom.scss
@@ -56,6 +56,8 @@
     background-color: $pointRed;
     border-radius: 50%;
     display: flex;
+    padding: 0.2rem;
+    font-size: $fontSs;
     justify-content: center;
     align-items: center;
     min-width: max-content;
