feat: #537 Add like lounge

--- a/front/src/SCSS/LoungePage/LoungePost.scss
+++ b/front/src/SCSS/LoungePage/LoungePost.scss
@@ -77,4 +77,11 @@
     bottom: 0.2rem;
     font-size: $fontMs;
   }
+  .bottom__like-icon-fill {
+    margin-right: 0.2rem;
+    position: relative;
+    bottom: 0.2rem;
+    font-size: $fontMs;
+    color: $pointRed;
+  }
 }
