--- a/front/src/SCSS/MainPage/Lounge.scss
+++ b/front/src/SCSS/MainPage/Lounge.scss
@@ -55,6 +55,7 @@
         padding-left: 3.5rem;
         margin-bottom: 1rem;
         line-height: 120%;
+        word-break: break-all;
       }
       .card__row3 {
         position: absolute;
