feat : add project list filter
- 프로젝트 리스트 필터기능 구현함
- 댓글 수정기능 추가구현
- 프로젝트 상태변경 기능 구현
- css 수정 필요

--- a/front/src/SCSS/ProjectDetail/ProjectContent.scss
+++ b/front/src/SCSS/ProjectDetail/ProjectContent.scss
@@ -20,6 +20,16 @@
     margin: 2rem 2rem 1rem 2rem;
   }
 
+  // 레퍼런스 링크 부분
+  .link_list {
+    display: flex;
+    flex-direction: column;
+    .link_wrap {
+      display: flex;
+      align-items: center;
+    }
+  }
+
   /* toast UI */
   .toastui-editor-contents {
     font-size: 1rem;
