--- a/front/src/SCSS/ProjectDetail/MemberList.scss
+++ b/front/src/SCSS/ProjectDetail/MemberList.scss
@@ -3,14 +3,33 @@
 .member_list {
   display: flex;
   flex-direction: column;
+  width: 100%;
   .list_row1 {
     display: flex;
     align-items: center;
     flex-direction: row;
+    justify-content: space-between;
     margin-bottom: 0.5rem;
-    .member_count {
-      font-size: $fontMs;
-      font-weight: $normal;
+    .member-icon__wrap {
+      display: flex;
+      align-items: center;
+      flex-direction: row;
+      .member_count {
+        font-size: $fontMs;
+        font-weight: $normal;
+      }
+    }
+    .project_manage {
+      display: flex;
+      flex-direction: row;
+      // margin-left: 30rem;
+      .edit__btn {
+        padding: 0.8rem;
+        border-radius: 10px;
+        border: 1px solid #e5e5e5;
+        cursor: pointer;
+        margin-left: 1rem;
+      }
     }
   }
   .member_image_list {
@@ -37,15 +56,54 @@
           height: 3.7rem;
           object-fit: cover;
         }
-        .member_position {
-          margin-top: 5px;
-          padding: 0.2rem 0.5rem;
-          width: 5rem;
-          border-radius: 2rem;
-          color: white;
-          font-size: $fontSs;
-          text-align: center;
-          background-color: $mainColor;
+        .member_position__row1 {
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          .member_position {
+            display: flex;
+            flex-direction: row;
+            cursor: pointer;
+            align-items: center;
+            justify-content: space-between;
+            margin-top: 5px;
+            padding: 0.2rem 0.5rem;
+            width: 5.5rem;
+            border-radius: 2rem;
+            color: white;
+            font-size: $fontSs;
+            text-align: center;
+            background-color: $mainColor;
+          }
+          .member_control {
+            justify-content: right;
+            position: relative;
+            .member_toggle {
+              position: absolute;
+              background-color: #e5e5e5;
+              font-size: $fontSs;
+              padding: 0.3rem;
+              border-radius: $round;
+              box-shadow: $shadow;
+              top: 1.3rem;
+              right: -1.7rem;
+              width: 6.6rem;
+              z-index: 1;
+              overflow: hidden;
+              .toggle_text {
+                color: black;
+                font-size: $fontSs;
+                margin: 0.3rem;
+                border-bottom: 1px solid #c4c4c4;
+              }
+              .change_position {
+                // z-index: 1;
+                // top: 3rem;
+                // width: 6.5rem;
+                font-size: $fontSs;
+              }
+            }
+          }
         }
       }
     }
