--- a/front/src/SCSS/ProjectDetail/ProjectComment.scss
+++ b/front/src/SCSS/ProjectDetail/ProjectComment.scss
@@ -10,6 +10,9 @@
   background: white;
   .comment_main {
     // min-height: 10rem;
+    display: flex;
+    flex-direction: column;
+    gap: 0.7rem;
     .comment-list {
       display: flex;
       flex-direction: row;
@@ -20,7 +23,13 @@
         font-weight: $semiBold;
       }
       .comment-content {
-        margin: 0.5rem;
+        margin: 0 0.5rem;
+        padding: 0.7rem 1rem;
+        // border: 1px solid $lightestGrey;
+        border-radius: 2rem;
+        box-shadow: $shadowLight;
+        text-align: left;
+        word-break: break-all;
       }
     }
     .empty-comment {
@@ -54,7 +63,7 @@
     textarea {
       padding: 1rem;
       width: 92%;
-      height: 5rem;
+      // height: 3rem;
       resize: none;
     }
     button {
