--- a/front/src/SCSS/ProjectDetail/ProjectDetail.scss
+++ b/front/src/SCSS/ProjectDetail/ProjectDetail.scss
@@ -52,14 +52,15 @@
     padding: 3rem;
   }
   .project-cancle_btn {
-    border: 2px solid $lightestGrey;
+    border: 1px solid $lightestGrey;
+    box-shadow: $shadowLight;
     border-radius: $round;
     display: flex;
     justify-content: center;
     width: 5rem;
     min-width: max-content;
     margin: 1rem auto;
-    padding: 0.5rem 1.2rem;
+    padding: 0.7rem 1.2rem;
     color: #595959;
   }
 }
