--- a/front/src/SCSS/ProjectDetail/WaitList.scss
+++ b/front/src/SCSS/ProjectDetail/WaitList.scss
@@ -2,22 +2,27 @@
 
 .wait__list {
   position: relative;
-  // border: solid 1px black;
   .waitlist {
-    margin-left: 30rem;
     .waitlist__btn {
-      padding: 0.8rem;
+      padding: 0.7rem 1.2rem;
       border-radius: 10px;
       border: 1px solid #e5e5e5;
       text-align: center;
       cursor: pointer;
       margin-left: 1rem;
+      min-width: max-content;
     }
     .waitlist__count {
       position: absolute;
       z-index: 1;
       top: -0.5rem;
       right: -0.2rem;
+      width: 1.2rem;
+      height: 1.2rem;
+      font-weight: $normal;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       border-radius: 50%;
       color: white;
       font-size: $fontSs;
@@ -30,10 +35,16 @@
       z-index: 1;
       top: -0.5rem;
       right: -0.2rem;
+      width: 1.2rem;
+      height: 1.2rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: $normal;
       border-radius: 50%;
       color: white;
       font-size: $fontSs;
-      padding: 0.2rem;
+      padding: 0.3rem;
       text-align: center;
       background-color: $lightGrey;
     }
@@ -60,6 +71,8 @@
     .waitlist__body {
       max-height: 19rem;
       overflow-y: scroll;
+      width: 100%;
+      padding: 0;
       .body__card {
         border-bottom: 1px solid $lightestGrey;
         // padding: 0 0.5rem;
@@ -83,7 +96,7 @@
             display: flex;
             flex-direction: row;
             svg {
-              margin: 5px;
+              margin: 0.1rem;
             }
           }
         }
