--- a/front/src/SCSS/init.scss
+++ b/front/src/SCSS/init.scss
@@ -26,11 +26,10 @@
 }
 body {
   font-family: "Nunito Sans", "AppleSDGothicNeo", sans-serif;
-  margin: 0.5rem 1rem;
+  // margin: 0.5rem 1rem;
   background-color: $bodyColor;
   color: $darkGrey;
 }
-
 @media (max-width: 78rem) {
   html {
     font-size: 12px;
@@ -38,6 +37,7 @@ body {
 }
 
 a {
+  color: inherit;
   text-decoration: none;
   &:hover {
     color: $mainColor;
