--- a/front/src/SCSS/ProjectDetail/CheckModal.scss
+++ b/front/src/SCSS/ProjectDetail/CheckModal.scss
@@ -38,7 +38,7 @@
       cursor: pointer;
     }
     div:nth-child(2) {
-      border-left: 1px solid rgba(86, 86, 86, 0.25);
+      border-left: 1px solid #f0f0f0;
     }
     .validate__cancel {
       color: black;
