--- a/front/src/SCSS/ProjectDetail/ProjectStatusChange.scss
+++ b/front/src/SCSS/ProjectDetail/ProjectStatusChange.scss
@@ -14,7 +14,7 @@
     top: 3rem;
     // right: -14.5rem;
     left: 1rem;
-    width: 12rem;
+    width: 10rem;
     z-index: 3;
     overflow: hidden;
     .toggle_header {
@@ -25,19 +25,19 @@
     }
     .toggle_body {
       display: flex;
-      flex-direction: column;
-      margin: 0.5rem;
+      padding: 0.5rem;
+      padding-bottom: 0;
+      justify-content: space-between;
       align-items: center;
       .change_select {
         background-color: white;
       }
     }
-    // .change_btn {
-    //   // margin-top: 1rem;
-    //   // background-color: white;
-    //   // padding: 0.5rem;
-    //   // border-radius: 0.5rem;
-    //   // border: 1px solid black;
-    // }
+    .change_btn {
+      margin-left: 0.3rem;
+      color: $mainColor;
+      cursor: pointer;
+      // font-size: 2rem;
+    }
   }
 }
