--- a/front/src/SCSS/ProjectDetail/ProjectComment.scss
+++ b/front/src/SCSS/ProjectDetail/ProjectComment.scss
@@ -16,7 +16,7 @@
     .comment-list {
       display: flex;
       flex-direction: row;
-      align-items: center;
+      align-items: flex-start;
       text-align: center;
       .comment-id {
         margin: 0.5rem;
@@ -30,6 +30,13 @@
         box-shadow: $shadowLight;
         text-align: left;
         word-break: break-all;
+        line-height: 120%;
+      }
+      .comment-icons {
+        margin-top: 0.5rem;
+        display: flex;
+        gap: 0.3rem;
+        margin-left: 0.5rem;
       }
     }
     .empty-comment {
@@ -50,6 +57,23 @@
     align-items: center;
     margin-bottom: 0.5rem;
   }
+  .comment-right {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    textarea {
+      width: 100%;
+      padding: 0.7rem 1rem;
+      min-height: max-content;
+      line-height: 120%;
+      // width: max-content;
+      // height: max-content;
+      resize: none;
+      // border-radius: 2rem;
+      margin-left: 0.5rem;
+    }
+  }
   .comment_text {
     margin-left: 0.5rem;
     font-size: $fontMs;
@@ -60,10 +84,16 @@
     flex-direction: row;
     align-items: flex-end;
     margin-top: 1rem;
+    border: 2px solid $mainColor;
+    border-radius: $round;
+    padding: 1rem;
     textarea {
-      padding: 1rem;
+      line-height: 120%;
+      padding: 0;
       width: 92%;
-      // height: 3rem;
+      border: none;
+      border-radius: 0;
+      height: 3rem;
       resize: none;
     }
     button {
