--- a/front/src/SCSS/ProjectDetail/ProjectDetail.scss
+++ b/front/src/SCSS/ProjectDetail/ProjectDetail.scss
@@ -88,7 +88,7 @@
     background: white;
   }
   .body-content {
-    padding-bottom: 3rem;
+    // padding-bottom: 1rem;
     border-radius: $round;
     // border: 1px solid black;
     background: white;
