--- a/front/src/SCSS/ProjectDetail/ProjectDetailHeader.scss
+++ b/front/src/SCSS/ProjectDetail/ProjectDetailHeader.scss
@@ -1,7 +1,7 @@
 @import "../Base.scss";
 
 .header_image {
-  margin: 10px 10px 5px 10px;
+  margin: 0 10px 5px 10px;
   border-radius: $round;
   background-color: #808080;
   position: relative;
