--- a/front/src/SCSS/ProjectDetail/ProjectComment.scss
+++ b/front/src/SCSS/ProjectDetail/ProjectComment.scss
@@ -19,7 +19,7 @@
       align-items: flex-start;
       text-align: center;
       .comment-id {
-        margin: 0.5rem;
+        margin: 0.7rem 0.5rem 0.5rem 0.5rem;
         font-weight: $semiBold;
       }
       .comment-content {
@@ -31,6 +31,11 @@
         text-align: left;
         word-break: break-all;
         line-height: 120%;
+        white-space: pre-wrap; /* Since CSS 2.1 */
+        white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+        white-space: -pre-wrap; /* Opera 4-6 */
+        white-space: -o-pre-wrap; /* Opera 7 */
+        word-wrap: break-word; /* Internet Explorer 5.5+ */
       }
       .comment-icons {
         margin-top: 0.5rem;
