--- a/front/src/SCSS/ProjectDetail/ProjectDetailHeader.scss
+++ b/front/src/SCSS/ProjectDetail/ProjectDetailHeader.scss
@@ -35,6 +35,6 @@
   font-size: $fontSs;
   padding: 0.3rem 0.7rem;
   border-radius: 1rem;
-  background-color: darkcyan;
+  // background-color: darkcyan;
   bottom: 3rem;
 }
