--- a/front/src/SCSS/ProjectDetail/MemberList.scss
+++ b/front/src/SCSS/ProjectDetail/MemberList.scss
@@ -39,134 +39,128 @@
     flex-direction: row;
     margin: 1rem 1rem 1rem 1rem;
     position: relative;
-    .filled_member {
+    flex-wrap: wrap;
+    .member_image {
+      margin: 0.5rem;
       display: flex;
-      flex-direction: row;
-      .member_image {
-        margin: 0.5rem;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      .leader_icon {
+        position: absolute;
+        top: -0.7rem;
+      }
+      img {
+        border-radius: 50%;
+        width: 3.7rem;
+        height: 3.7rem;
+        object-fit: cover;
+      }
+      .member_position__row1 {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         align-items: center;
-        justify-content: center;
-        .leader_icon {
-          position: absolute;
-          top: -0.7rem;
-        }
-        img {
-          border-radius: 50%;
-          width: 3.7rem;
-          height: 3.7rem;
-          object-fit: cover;
-        }
-        .member_position__row1 {
+        .member_position {
           display: flex;
           flex-direction: row;
+          // cursor: pointer;
           align-items: center;
-          .member_position {
-            display: flex;
-            flex-direction: row;
-            // cursor: pointer;
-            align-items: center;
-            justify-content: space-between;
-            margin-top: 5px;
-            padding: 0.2rem 0.5rem;
-            width: 5.5rem;
-            border-radius: 2rem;
-            color: white;
+          justify-content: space-between;
+          margin-top: 5px;
+          padding: 0.2rem 0.5rem;
+          width: 5.5rem;
+          border-radius: 2rem;
+          color: white;
+          font-size: $fontSs;
+          text-align: center;
+          background-color: $mainColor;
+          // .empty_div {
+          //   width: 1rem;
+          // }
+        }
+        .member_control {
+          justify-content: right;
+          position: relative;
+          cursor: pointer;
+          .member_toggle {
+            position: absolute;
+            background-color: $bodyColor;
             font-size: $fontSs;
-            text-align: center;
-            background-color: $mainColor;
-            // .empty_div {
-            //   width: 1rem;
-            // }
-          }
-          .member_control {
-            justify-content: right;
-            position: relative;
-            cursor: pointer;
-            .member_toggle {
-              position: absolute;
-              background-color: $bodyColor;
+            padding: 0.3rem;
+            border-radius: $round;
+            box-shadow: $shadow;
+            top: 1.3rem;
+            right: -1rem;
+            width: 6.6rem;
+            z-index: 1;
+            overflow: hidden;
+            .toggle_text {
+              color: black;
               font-size: $fontSs;
+              // margin: 0.3rem;
               padding: 0.3rem;
-              border-radius: $round;
-              box-shadow: $shadow;
-              top: 1.3rem;
-              right: -1rem;
-              width: 6.6rem;
-              z-index: 1;
-              overflow: hidden;
-              .toggle_text {
-                color: black;
-                font-size: $fontSs;
-                // margin: 0.3rem;
-                padding: 0.3rem;
-                // border-top: 1px solid $lightestGrey;
-              }
-              .toggle_text:nth-child(2),
-              .toggle_text:nth-child(3) {
-                border-top: 1px solid $lightestGrey;
-              }
-              .change_position {
-                // z-index: 1;
-                // top: 3rem;
-                // width: 6.5rem;
-                font-size: $fontSs;
-              }
+              // border-top: 1px solid $lightestGrey;
+            }
+            .toggle_text:nth-child(2),
+            .toggle_text:nth-child(3) {
+              border-top: 1px solid $lightestGrey;
+            }
+            .change_position {
+              // z-index: 1;
+              // top: 3rem;
+              // width: 6.5rem;
+              font-size: $fontSs;
             }
           }
         }
       }
     }
-    .empty_list {
+    // display: flex;
+    // flex-direction: row;
+    .empty_member {
+      width: 5rem;
+      margin: 0.5rem;
       display: flex;
-      flex-direction: row;
-      // flex-wrap: wrap;
-      .empty_member {
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+      .plus_icon {
+        cursor: pointer;
+        transition: width 300ms ease;
+        position: absolute;
+        right: -0rem;
+        top: -0.5rem;
+        background-color: white;
+        border-radius: 50%;
+        box-shadow: $shadow;
+      }
+      .plus_icon:hover {
+        transform: scale(1.1);
+      }
+      .check_icon {
+        position: absolute;
+        right: -0rem;
+        top: -0.5rem;
+        background-color: white;
+        border-radius: 50%;
+        box-shadow: $shadow;
+      }
+      .chair_icon {
+        .empty_chair-icon {
+          border-radius: 50%;
+          border: 1px solid $lightGrey;
+        }
+      }
+      .empty_position {
+        margin-top: 5px;
+        padding: 0.2rem 0.5rem;
         width: 5rem;
-        margin: 0.5rem;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        position: relative;
-        .plus_icon {
-          cursor: pointer;
-          transition: width 300ms ease;
-          position: absolute;
-          right: -0rem;
-          top: -0.5rem;
-          background-color: white;
-          border-radius: 50%;
-          box-shadow: $shadow;
-        }
-        .plus_icon:hover {
-          transform: scale(1.1);
-        }
-        .check_icon {
-          position: absolute;
-          right: -0rem;
-          top: -0.5rem;
-          background-color: white;
-          border-radius: 50%;
-          box-shadow: $shadow;
-        }
-        .chair_icon {
-          .empty_chair-icon {
-            border-radius: 50%;
-            border: 1px solid $lightGrey;
-          }
-        }
-        .empty_position {
-          margin-top: 5px;
-          padding: 0.2rem 0.5rem;
-          width: 5rem;
-          border-radius: 2rem;
-          color: white;
-          font-size: $fontSs;
-          text-align: center;
-          background-color: #c4c4c4;
-        }
+        border-radius: 2rem;
+        color: white;
+        font-size: $fontSs;
+        text-align: center;
+        background-color: #c4c4c4;
       }
     }
   }
