feat: #567 add lounge reply pagination

--- a/front/src/SCSS/Base.scss
+++ b/front/src/SCSS/Base.scss
@@ -5,8 +5,9 @@ $mainColor: #a7bc5b;
 $black: #2c2c34;
 $darkGrey: #565656;
 $grey: #8e8e93;
-$lightestGrey: #e5e5e5;
 $lightGrey: #c4c4c4;
+$lightestGrey: #e5e5e5;
+$slightGrey: #efefef;
 $pointRed: #ff6864;
 $pointBlue: #5bbcb6;
 //font-weight 기본:400
