--- a/front/src/SCSS/MainPage/Dashboard.scss
+++ b/front/src/SCSS/MainPage/Dashboard.scss
@@ -83,7 +83,7 @@
     height: 100%;
     display: flex;
     flex-grow: 1;
-    overflow: scroll;
+    overflow-y: scroll;
     &::-webkit-scrollbar {
       background: transparent;
       -ms-overflow-style: none;
