feat : add comment time info - 라운지 페이지 댓글 시간부분을 참고하여 추가함.

--- a/front/src/SCSS/ProjectDetail/ProjectComment.scss
+++ b/front/src/SCSS/ProjectDetail/ProjectComment.scss
@@ -37,11 +37,20 @@
         white-space: -o-pre-wrap; /* Opera 7 */
         word-wrap: break-word; /* Internet Explorer 5.5+ */
       }
+
       .comment-icons {
+        // align-items: center;
+        font-size: $fontSs;
+        color: $lightGrey;
         margin-top: 0.5rem;
         display: flex;
         gap: 0.3rem;
         margin-left: 0.5rem;
+        .comment-time {
+          font-size: $fontSs;
+          color: $lightGrey;
+          margin-right: 0.5rem;
+        }
       }
     }
     .empty-comment {
