feat: #567 add comment edit/delete

--- a/front/src/SCSS/LoungePage/LoungeComment.scss
+++ b/front/src/SCSS/LoungePage/LoungeComment.scss
@@ -16,19 +16,28 @@
       height: 2rem;
       border-radius: 50%;
       object-fit: cover;
+      cursor: pointer;
     }
     .comment-content {
       border-radius: 2rem;
       background-color: $slightGrey;
       padding: 0.5rem 1rem;
       width: fit-content;
+      word-break: break-all;
+    }
+    input.comment-content {
+      background-color: transparent;
+      width: auto;
+      max-width: 100%;
     }
     .comment-bubble {
       display: flex;
       flex-direction: column;
       gap: 0.2rem;
+      width: 100%;
       .comment-username {
         margin-left: 0.5rem;
+        cursor: pointer;
         font-size: $fontSs;
         display: flex;
         gap: 0.5rem;
@@ -42,7 +51,7 @@
         font-size: $fontSs;
         color: $lightGrey;
         display: flex;
-        gap: 0.3rem;
+        gap: 0.5rem;
         margin-left: 0.5rem;
         .comment-time {
           margin-right: 0.5rem;
@@ -78,5 +87,10 @@
       cursor: pointer;
       margin-right: 0.5rem;
     }
+  }
+
+  .comment__on-edit {
+    display: flex;
+    gap: 0.5rem;
   }
 }
