--- a/front/src/SCSS/ProfilePage/ProfileHeader.scss
+++ b/front/src/SCSS/ProfilePage/ProfileHeader.scss
@@ -71,7 +71,7 @@
     position: absolute;
     // width: 0;
     // height: 0;
-    z-index: 10;
+    // z-index: 10;
     bottom: 100%;
     // top: 0;
     right: 50%;
