feat: #617 modify lounge reply pagination

--- a/front/src/SCSS/LoungePage/LoungePost.scss
+++ b/front/src/SCSS/LoungePage/LoungePost.scss
@@ -71,6 +71,7 @@
     margin-left: 4rem;
     color: $lightGrey;
     border: none;
+    padding: 0;
     background-color: white;
     .bottom__comment-icon {
       position: relative;
