--- a/front/src/SCSS/Common/Navbar/Navbar.scss
+++ b/front/src/SCSS/Common/Navbar/Navbar.scss
@@ -226,7 +226,7 @@
       padding: 0.5rem;
       margin-right: 0.7rem;
       font-size: $fontSm;
-      font-weight: $bold;
+      font-weight: $normal;
       border-bottom: 1px solid $lightestGrey;
     }
     .notiText__body {
