--- a/front/src/SCSS/ProjectDetail/ProjectStatusChange.scss
+++ b/front/src/SCSS/ProjectDetail/ProjectStatusChange.scss
@@ -20,7 +20,7 @@
     .toggle_header {
       padding: 0.5rem;
       font-size: $fontSm;
-      font-weight: $bold;
+      font-weight: $normal;
       border-bottom: 1px solid $lightestGrey;
     }
     .toggle_body {
