--- a/front/src/SCSS/ProjectDetail/WaitList.scss
+++ b/front/src/SCSS/ProjectDetail/WaitList.scss
@@ -65,7 +65,7 @@
     .waitlist__header {
       padding: 0.5rem;
       font-size: $fontSm;
-      font-weight: $bold;
+      font-weight: $normal;
       border-bottom: 1px solid $lightestGrey;
     }
     .waitlist__body {
