--- a/front/src/SCSS/Common/Navbar/Navbar.scss
+++ b/front/src/SCSS/Common/Navbar/Navbar.scss
@@ -186,7 +186,7 @@
     justify-content: center;
     align-items: center;
     height: 1.2rem;
-    width: 1.2rem;
+    min-width: 1.2rem;
     border-radius: 50%;
     font-weight: $normal;
     background-color: $pointRed;
