feat: #627 show div when no post in lounge

--- a/front/src/SCSS/Base.scss
+++ b/front/src/SCSS/Base.scss
@@ -5,6 +5,7 @@ $mainColor: #a7bc5b;
 $black: #2c2c34;
 $darkGrey: #565656;
 $grey: #8e8e93;
+$lessGrey: #a8a8a8;
 $lightGrey: #c4c4c4;
 $lightestGrey: #e5e5e5;
 $slightGrey: #efefef;
