--- a/front/src/SCSS/ProjectDetail/ProjectComment.scss
+++ b/front/src/SCSS/ProjectDetail/ProjectComment.scss
@@ -61,7 +61,8 @@
       background-color: $bodyColor;
       border-radius: $round;
       padding: 2rem;
-      color: $grey;
+      color: $lessGrey;
+      font-weight: $regular;
     }
   }
 
