--- a/front/src/SCSS/LoungePage/LoungeWrite.scss
+++ b/front/src/SCSS/LoungePage/LoungeWrite.scss
@@ -22,6 +22,13 @@
       // margin-bottom: 0.5rem;
       margin-right: 1rem;
     }
+    .profile__icon {
+      width: 3rem;
+      height: 3rem;
+      margin-right: 1rem;
+      color: $darkGrey;
+      opacity: 0.8;
+    }
     .profile__name {
       font-size: $fontMs;
     }
