feat : #621 add cadet list filter - 카뎃리스트의 필터 구현. - 프로젝트 필터, 카뎃 필터가 이전에 입력한 데이터 갖고 있도록 설정. - 외부 클릭시 꺼지게 만들었음.

--- a/front/src/SCSS/AllProjectPage/ProjectFilter.scss
+++ b/front/src/SCSS/AllProjectPage/ProjectFilter.scss
@@ -23,6 +23,20 @@
   .skill_filter {
     display: flex;
     flex-direction: column;
+    .project-edit__skill {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      .add-skill__icon {
+        color: $lightGrey;
+        margin-left: 0.5rem;
+        font-size: 1.8rem;
+        cursor: pointer;
+        &:hover {
+          color: $mainColor;
+        }
+      }
+    }
     .skill__tags {
       margin: 0.5rem;
       display: flex;
