--- a/front/src/SCSS/CadetPage/CadetFilter.scss
+++ b/front/src/SCSS/CadetPage/CadetFilter.scss
@@ -15,7 +15,7 @@
   .filter_header {
     padding: 0.5rem;
     font-size: $fontSm;
-    font-weight: $bold;
+    font-weight: $normal;
     border-bottom: 1px solid $lightestGrey;
     margin-bottom: 1rem;
     margin-top: 0.5rem;
@@ -59,6 +59,9 @@
   .position_filter {
     display: flex;
     flex-direction: column;
+    #job_select {
+      margin-bottom: 1rem;
+    }
     .position__tags {
       display: flex;
       flex-direction: row;
