chore: #666 justify NEW tag time

--- a/front/src/SCSS/ProjectEditPage/ProjectEditPage.scss
+++ b/front/src/SCSS/ProjectEditPage/ProjectEditPage.scss
@@ -102,10 +102,12 @@
       color: white;
       border: none;
       margin: 0 0.5rem;
-      font-weight: $regular;
+      // font-weight: $regular;
     }
     .project-edit__delete {
-      background-color: $pointRed;
+      // background-color: $pointRed;
+      border: 1px solid $lightestGrey;
+      color: $darkGrey;
     }
     .project-edit__save {
       background-color: $mainColor;
