--- a/front/src/SCSS/ProjectDetail/ProjectInfo.scss
+++ b/front/src/SCSS/ProjectDetail/ProjectInfo.scss
@@ -3,6 +3,7 @@
 .project_info {
   display: flex;
   flex-direction: column;
+  width: 100%;
   padding: 1.5rem;
   margin: 0.5rem 0;
   box-shadow: $shadow;
